--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
   font-size: 16px;
   color: var(--first-color);
   background-color: var(--fifth-color);
-  background-color: silver;
 }
 
 li {
@@ -42,11 +41,6 @@ button {
   padding: 120px 0px 120px 0px;
 }
 
-.navigation-block {
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
 .navigation-block,
 .navigation,
 .navigation-list,
@@ -61,11 +55,12 @@ button {
 
 .navigation-block {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.revesed-footer {
+.reversed-footer {
   display: flex;
   gap: 331px;
   align-items: center;
@@ -259,25 +254,12 @@ button {
 
 /* portfolio */
 
-.content-section {
-  display: flex;
-  gap: 72px;
-}
-
-.cards {
-  display: flex;
-}
-
-.cards {
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 24px;
-}
-
 .button-list {
   display: flex;
   flex-direction: row;
   gap: 24px;
+  margin-bottom: 72px;
+  justify-content: center;
 }
 
 .filter-button {
@@ -312,12 +294,8 @@ button {
   flex-direction: column;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-  flex-basis: calc(100% / 3 - 24px);
+  border-bottom: 0.5px solid #f4f4fd;
 }
-
-/* .card-margin {
-  margin-right: 24px;
-} */
 
 .card > img {
   display: block;
@@ -334,6 +312,7 @@ button {
   display: flex;
   flex-direction: column;
   padding: 32px 0px 32px 16px;
+  padding-right: auto;
   gap: 8px;
   max-width: 300px;
 }
