--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,9 @@ button {
 
 .container {
   margin: 0 auto;
+  width: 100%;
   max-width: 1158px;
+  padding: 0px 15px;
 }
 
 .section {
@@ -126,10 +128,13 @@ button {
 
 .head-hero {
   background-color: var(--first-color);
-  padding: 192px 474px;
+  padding: 192px 0px;
+}
+
+.hero-container {
+  text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -140,7 +145,6 @@ button {
   line-height: 1.07;
   max-width: 492px;
   letter-spacing: 0.02em;
-  text-align: center;
 }
 
 .hero-button {
@@ -229,7 +233,7 @@ button {
   letter-spacing: 0.02em;
 }
 
-.heading-2 {
+.second-heading {
   font-size: 36px;
   text-align: center;
   line-height: 1.11;
@@ -294,7 +298,6 @@ button {
   flex-direction: column;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-bottom: 0.5px solid #f4f4fd;
 }
 
 .card > img {
@@ -314,7 +317,7 @@ button {
   padding: 32px 0px 32px 16px;
   padding-right: auto;
   gap: 8px;
-  max-width: 300px;
+  border-bottom: 0.5px solid #f4f4fd;
 }
 
 .photo-heading {
@@ -334,12 +337,15 @@ footer {
   background-color: var(--first-color);
 }
 
+.reversed-header {
+  padding: 100px 100px;
+}
+
 .footer-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 16px;
-  padding: 100px 0px;
 }
 
 .logo-footer {
